# GPU-LAB-Project

./: GPU-LAB-Project.sln  NCC_out.pgm  README.md  SAD_out.pgm
GPU-LAB-Project/: GPU-LAB-Project.cpp  GPU-LAB-Project.vcxproj  GPU-LAB-Project.vcxproj.filters  main.cpp
GPU-LAB-Project/Without_CV/: CMakeLists.txt
GPU-LAB-Project/Without_CV/images/: NCC_out.pgm
GPU-LAB-Project/x64/Debug/: GPU-LAB-Project.exe.recipe  GPU-LAB-Project.ilk  vc142.idb
GPU-LAB-Project/x64/Debug/GPU-LAB-Project.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  GPU-LAB-Project.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
GPU-LAB-Project/x64/Release/: GPU-LAB-Project.exe.recipe  GPU-LAB-Project.iobj  GPU-LAB-Project.ipdb
GPU-LAB-Project/x64/Release/GPU-LAB-Project.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  GPU-LAB-Project.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
OpenCL/: CMakeLists.txt  disparity_cl.cmake
OpenCL/Core/: TimeSpan.hpp
OpenCL/lib/Core/: Exception.cpp
OpenCL/src/: cl_disparity.cc  cl_disparity.cpp  cl_disparity.h  cpu_disparity.cpp  cpu_disparity.h  disparity.cl  main.cc  main.cpp  vec_operation.cpp  vec_operation.h
OpenCL/test/: Median_NCC_out_cpu.pgm  Median_NCC_out_gpu.pgm  Median_SAD_out_cpu.pgm  Median_SAD_out_gpu.pgm  NCC_out_cpu.pgm  SAD_out_cpu.pgm  out_ncc.pgm  out_ncc_no_subpixel.pgm  out_sad.pgm  out_sad.pgm_DBG_hist.pgm  out_sad_no_subpixel.pgm
Without_CV/: CMakeLists.txt  Lab_project.cpp  Median_NCC_out.pgm  Median_SAD_out.pgm  SAD_out.pgm  hist.pgm  vec_operation.cpp  vec_operation.h
Without_CV/Core/: Assert.cpp  Assert.hpp  CheckedCast.cpp  CheckedCast.hpp  Error.cpp  Error.hpp  Exception.cpp  Exception.hpp  Image.cpp  Image.hpp  Memory.cpp  Memory.hpp  NumericException.cpp  NumericException.hpp  StrError.c  StrError.h  Time.cpp  Time.hpp  TimeSpan.cpp  TimeSpan.hpp  Type.cpp  Type.hpp  Util.h  Util.hpp  WindowsError.cpp  WindowsError.hpp
Without_CV/OpenCL/: Device.cpp  Device.hpp  Error.cpp  Error.hpp  Event.cpp  Event.hpp  GetError.cpp  GetError.hpp  OpenCLKernel.hpp  OpenCLKernel.hpp.url  Program.cpp  Program.hpp  README-MacOS.txt  cl-patched.hpp  cl.hpp.orig.url
Without_CV/images/: SAD_out.pgm
